--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -1,25 +1,25 @@
 # SENSOR : ALIAS
-# tsens_tz_sensor5 : cpu5
-# tsens_tz_sensor4 : cpu4
-# tsens_tz_sensor2 : pop_mem
-# tsens_tz_sensor15 : gpu
-# tsens_tz_sensor13 : L2_cache_0
-# tsens_tz_sensor12 : cpu3
-# tsens_tz_sensor11 : cpu2
-# tsens_tz_sensor10 : cpu1
-# tsens_tz_sensor9 : cpu0
-# tsens_tz_sensor8 : L2_cache_1
-# tsens_tz_sensor7 : cpu7
-# tsens_tz_sensor6 : cpu6
+# apc1-cpu1-usr : cpu5
+# apc1-cpu0-usr : cpu4
+# pop-mem-step : pop_mem
+# gpu0-usr gpu1-usr : gpu
+# apc0-l2-usr : L2_cache_0
+# apc0-cpu3-usr : cpu3
+# apc0-cpu2-usr : cpu2
+# apc0-cpu1-usr : cpu1
+# apc0-cpu0-usr : cpu0
+# apc1-l2-usr   : L2_cache_1
+# apc1-cpu3-usr : cpu7
+# apc1-cpu2-usr : cpu6
 
 #Conf file: system/vendor/etc/thermal-engine.conf
 
 [VIRTUAL-CPUS]
 #algo_type virtual
-trip_sensor tsens_tz_sensor9
+trip_sensor apc0-cpu0-usr
 set_point 75000
 set_point_clr 65000
-sensors tsens_tz_sensor9 tsens_tz_sensor10 tsens_tz_sensor11 tsens_tz_sensor12 tsens_tz_sensor13 tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8
+sensors apc0-cpu0-usr apc0-cpu1-usr apc0-cpu2-usr apc0-cpu3-usr apc0-l2-usr apc1-cpu0-usr apc1-cpu1-usr apc1-cpu2-usr apc1-cpu3-usr apc1-l2-usr
 weights
 sampling 50
 math 2
@@ -27,7 +27,7 @@ math 2
 [SS-GPU]
 #algo_type ss
 sampling 250
-sensor gpu
+sensors gpu0-usr gpu1-usr
 device gpu
 set_point 95000
 set_point_clr 65000
@@ -35,8 +35,8 @@ time_constant 0
 
 [SS-CASE-THERM]
 algo_type ss
-sampling 1000
-sensor xo_therm
+sampling 10000
+sensor case-therm-adc
 device cluster0
 set_point 46000
 set_point_clr 44000
@@ -55,7 +55,7 @@ time_constant 0
 [SPEAKER-CAL]
 sampling 30000 30000 10 1800000
 sensor pm8953_tz
-sensors tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor14 tsens_tz_sensor15
+sensors qdsp-usr gpu0-usr gpu1-usr
 temp_range 6000 10000 2000
 max_temp 45000
 offset -4000
@@ -63,16 +63,25 @@ offset -4000
 [SS-POPMEM]
 #algo_type ss
 sampling 250
-sensor pop_mem
+sensor pop-mem-step
 device cluster0
 set_point 70000
 set_point_clr 55000
 time_constant 2
 
+[MONITOR-CAMERA-MSM]
+algo_type         monitor
+sampling          1000
+sensors           camera-usr mdm-core-user
+thresholds        52000        56000
+thresholds_clr    47000        53000
+actions           camera       camera
+action_info       1            2
+
 [MODEM_PA_MITIGATION]
 #algo_type monitor
 sampling 10000
-sensor case_therm
+sensor case-therm-adc
 thresholds 70000 70000
 thresholds_clr 69000 69000
 actions modem modem
@@ -81,7 +90,7 @@ action_info 2 3
 [MODEM_PROC_TEMP_MITIGATION]
 #algo_type monitor
 sampling 10000
-sensor case_therm
+sensor case-therm-adc
 thresholds 70000 70000
 thresholds_clr 69000 69000
 actions modem_proc modem_proc
@@ -90,16 +99,16 @@ action_info 1 3
 [BATTERY_CHARGING_CTL]
 algo_type monitor
 sampling 10000
-sensor xo_therm
+sensors case-therm-adc chg-temp-adc pa-therm0 mdm-core-usr
 thresholds 39000 42000 44000  47000
 thresholds_clr 38000 39000 42000  44000
 actions battery battery battery battery
 action_info 1 2 3 4
 
-[VDD_RSTR_MONITOR-TSENS15]
+[VDD_RSTR_MONITOR-GPU]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor15
+sensors gpu0-usr gpu1-usr gpu
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -109,7 +118,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS14]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor14
+sensor gpu0-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -119,7 +128,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS13]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor13
+sensor apc0-l2-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -129,7 +138,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS12]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor12
+sensor apc0-cpu3-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -139,7 +148,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS11]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor11
+sensor apc0-cpu2-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -149,7 +158,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS10]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor10
+sensor apc0-cpu1-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -159,7 +168,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS9]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor9
+sensor apc0-cpu0-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -169,7 +178,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS8]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor8
+sensor apc1-l2-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -179,7 +188,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS7]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor7
+sensor apc1-cpu3-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -189,7 +198,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS6]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor6
+sensor apc1-cpu2-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -199,7 +208,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS5]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor5
+sensor apc1-cpu1-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -209,7 +218,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS4]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor4
+sensor apc1-cpu0-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -219,7 +228,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS3]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor3
+sensor camera-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -229,7 +238,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS2]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor2
+sensor qdsp-usr pop-mem-step
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
@@ -239,7 +248,7 @@ descending
 [VDD_RSTR_MONITOR-TSENS1]
 #algo_type monitor
 sampling 1000
-sensor tsens_tz_sensor1
+sensor mdm-core-usr
 thresholds 5000
 thresholds_clr 10000
 actions vdd_restriction
