--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -33,6 +33,9 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
 
+    # Change ownership of sysfs power control node
+    chown system graphics /sys/class/drm/card0/device/power/control
+
     # Change ownership of sw_sync node
     chown system graphics /sys/kernel/debug/sync/sw_sync
     chmod 0666 /sys/kernel/debug/sync/sw_sync
